@@ -60,6 +60,22 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- add add-opens lines for **ALL** packages in your module that are tested.
+                        For testing it is fine to open your packages for the whole world, which includes
+                        e.g. junit, assertj, mockito, and jacoco, to name a few.
+                        Also leave ${argLine} because it is set/used by the coverage plugin.
+                    -->
+                    <argLine>
+                        ${argLine}
+                        --add-opens GUI_module/fontys.frontend=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application.ParametersImpl=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
